--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tapity Tap Music City</title>
+    <title>Tapity Tap Music</title>
     <link rel="icon" href="icon.jpg" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,7 +16,7 @@
   <body>
     <div class="app">
       <header>
-        <h1>Tapity Tap Music City</h1>
+        <h1>Tapity Tap Music</h1>
         <p>Make music with only one tap</p>
       </header>
       <div class="visual"></div>
